fix menu icon not showing on github

--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ nav li a:hover {
     right: 2rem;
     z-index: 9999;
     background-color: transparent;
-    background-image: url("/assets/images/icon-menu.svg");
+    background-image: url("assets/images/icon-menu.svg");
     width: 1.5rem;
     aspect-ratio: 1;
     background-repeat: no-repeat;
@@ -371,7 +371,7 @@ nav li a:hover {
   }
 
   .nav_toggle[aria-expanded="true"] {
-    background-image: url("/assets/images/icon-menu-close.svg");
+    background-image: url("assets/images/icon-menu-close.svg");
   }
 
 
